--- a/gb/24/4/10/n14222189.md
+++ b/gb/24/4/10/n14222189.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>雄中雄女要合并？ 27日全球校友齐聚洛杉矶</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/04/id14222200-290e40e4c4f32daafa78e39e58b5be56-e1712713400286.jpg" />
 <h6>2024年4月9日，美洲雄中雄女校友会举办记者会宣布，4月27日将在洛杉矶举办全球年会。（徐曼沅／大纪元） 
 </h6>
 <hr>
 	<p>【大纪元2024年04月10日讯】（大纪元记者徐曼沅洛杉矶报导）“雄中与雄女决定合并，下学期开始，雄中、雄女要男女合班上课”，这是2022年4月1日愚人节，时任中华民国台湾副总统赖清德在高雄中学百年校庆时和学生们开的玩笑。但今年4月27日全球的雄中、雄女校友将齐聚洛杉矶，毕业已久的男、女同学们终于可以齐聚一堂。</p>
-<figure id="attachment_14222203" aria-describedby="caption-attachment-14222203" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14222203-43f3f76a9199b1a5daa37c3da0741831.jpg"><img class="size-large wp-image-14222203" src="https://i.epochtimes.com/assets/uploads/2024/04/id14222203-43f3f76a9199b1a5daa37c3da0741831-600x330.jpg" alt="" width="600" b="330" /></a><figcaption id="caption-attachment-14222203" class="wp-caption-text">2024年4月9日，美洲雄中雄女校友会宣布，今年适逢雄女百年校庆，雄中雄女全球校友会将于洛杉矶举办盛大年会。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14222203" aria-describedby="caption-attachment-14222203" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14222203-43f3f76a9199b1a5daa37c3da0741831.jpg"><img decoding="async" class="size-large wp-image-14222203" src="https://i.epochtimes.com/assets/uploads/2024/04/id14222203-43f3f76a9199b1a5daa37c3da0741831-600x330.jpg" alt="" width="600" b="330" /></a><figcaption id="caption-attachment-14222203" class="wp-caption-text">2024年4月9日，美洲雄中雄女校友会宣布，今年适逢雄女百年校庆，雄中雄女全球校友会将于洛杉矶举办盛大年会。（徐曼沅／大纪元）</figcaption></figure>
 <p>美洲雄中雄女联合校友会会长林荣松表示，今年适逢高雄女中百年校庆，将在洛杉矶扩大举行全球年会。此次年会将在圣盖博希尔顿（San Gabriel Hilton）举行，目前已知有来自台湾、日本和美国各城市的校友参与。他说：“这一辈子大概只能参加一次，下一次还要再等一百年。”为了让宾主尽欢，成本130美元的餐券，一般券仅售120美元，贵宾券300美元；还有抽奖券，最大奖项是华航所赞助的洛杉矶─台北往返机票一张，以及现金红包等多项丰富奖品，参加值回票价。</p>
 <p>雄中雄女全球校友会成立于2022年，于雄中创校百年之时。该会理事柯清隆表示，雄中、雄女因地缘关系，两校联谊历史悠久，校友们毕业后在各地打拼，也成为互相鼓励、支援的伙伴。雄中、雄女有不少夫妻档，如柯清隆的夫人即毕业于高雄女中，校友中亦不乏一家人的兄弟姐妹档，双校合办校友会水到渠成。但雄中、雄女若要合并，恐怕有一定的困难，如雄中迄今也没有充足的女厕。</p>
 <p>美洲雄中雄女校友会理事胡安滢表示，今年将邀请300位来自世界各地的雄中、雄女校友参加年会；为鼓励更多年轻人参与，将提供10位来自高雄的在美学生免费报名参加，请洽949-230-2478。她表示，雄中、雄女校友们的年龄层跨度很大，近年来积极发掘年轻校友加入；该校友会利用其人脉资源，将帮助校友接触不同领域人才，胡安滢欢迎所有校友回归参与年会。</p>
@@ -18,35 +18,33 @@
 <p>责任编辑：方平</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/2/7/n10123905.md#1">雄中雄女校友会洛城相聚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/1/n11225954.md#1">雄中雄女世界校友大会 相聚洛城</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/9/10/n13223339.md#1">南加侨界共同发声 支持台湾参与联合国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13994335.md#1">大洛杉矶侨界48团体挺台入世卫</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/7/n10123905.md#1">雄中雄女校友会洛城相聚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/1/n11225954.md#1">雄中雄女世界校友大会 相聚洛城</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/10/n13223339.md#1">南加侨界共同发声 支持台湾参与联合国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/11/n13994335.md#1">大洛杉矶侨界48团体挺台入世卫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/2/n10015824.md#1" target="_blank">文武：中共篡政（三）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/4/n11163148.md#1" target="_blank">医生见证人病人重生的神奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/16/n10149315.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/2/24/n3807816.md#1" target="_blank">飞瀑：迫害法轮功 中共偷偷摸摸作恶何其多？</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/3/n14217618.md#1">一场大地震前的神奇预警</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/1/n14215650.md#1">【未解之谜】2024最新预言 红朝要变天？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/5/n14218770.md#1">5至8岁学龄儿童的行为（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/4/n14218210.md#1">【古道人生】两名医同时诊病所见 原来死生在命不在医</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/5/n14218553.md#1">【未解之谜】灾难背后有玄机 何人能逃离生死劫数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14222020.md#1">【菁英论坛】“三体”火爆 地球毁灭源自中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/6/n14219601.md#1">【中国禁闻】美将部署新型导弹 北京在射程内</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221869.md#1">【新闻大破解】耶伦访华发警告 备好金融大招？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/7/n14220474.md#1">男子在大学靠150美元开副业 现在年收入2亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14220926.md#1">【中国观察】习与胡耀邦长子关系内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14221017.md#1">【更新】日全食横穿美国 在加拿大结束</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/6/n14219750.md#1">孙俪自曝通过大提琴一级考 新剧美甲造型曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/6/n14219799.md#1">巨石强森称不满美国现状 不认可“觉醒文化”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14221273.md#1">杨幂为新片造型漂发7小时 粉丝担心她变秃头</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/6/n14219767.md#1">喂儿子吃饭遇地震 林志玲丈夫连人带椅抱着跑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14221376.md#1">高晓松3年前遭封杀 如今身形暴瘦大变样</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/6/n14219366.md#1">洗浴巾犯这个错误会变硬 如何让它恢复松软？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/7/n14220288.md#1">怎样观看日食不伤眼睛？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/7/n14220200.md#1">如何让自己不要想太多？心理学家教你几招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14220982.md#1">发泄无法减少愤怒？ 研究：用这招才有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/7/n14220317.md#1">西兰花中的化合物有助于溶解血栓和预防中风</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/10/n14222189.htm">雄中雄女要合并？ 27日全球校友齐聚洛杉矶</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222189.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418708.md#1">台故宫推筑城风云特展 看台湾独特筑城故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421709.md#1">【未解之谜】皮行者牧场（二）：神秘的隐形人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403677.md#1">善恶有报：泯没良心 恶妇当下变动物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406436.md#1">古代的人是如何过年的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421729.md#1">【车评】本田首部电车 2025 Honda Prologue Elite</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421721.md#1">【军事情报局】中共所谓六代机是真六代机吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421249.md#1">【新闻大家谈】川普达沃斯讲话：习主动致电</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420914.md#1">台湾茶叶大使许正龙的“泡茶密码”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420923.md#1">夏洛山：建全球最大填海机场 中共做赔本买卖？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421046.md#1">北京推保险资金入市 专家吁股民加紧逃离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420977.md#1">王宝强加入周润发跑友圈 为角色成功减重30斤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420918.md#1">刘晓庆：不知自己真实年龄 感觉自己适合属虎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421651.md#1">遭封杀3年 邓伦不露脸不具名拍杂志试水复出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420870.md#1">奥斯卡入围名单揭晓 《璀璨女人梦》成大赢家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421683.md#1">港星薛凯琪至今没出嫁 直呼TVB多少要负点责</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421953.md#1">世界最短电扶梯在日本 只有5阶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421359.md#1">为什么航空公司租轮胎给飞机使用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421775.md#1">吃草饲牛肉或榖饲牛肉 哪种更健康？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418374.md#1">头发越来越少怎么办？3茶饮5穴位养发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416125.md#1">有备无患 日本家庭避难包必备这些物资</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/10/n14222189.htm">雄中雄女要合并？ 27日全球校友齐聚洛杉矶</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/4/10/n14222189.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
